added viewport tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <header>
 
         <meta charset="utf-8">
+        <meta name="viewport" content="width = device-width, initial-scale = 1">
+
         <Title>Portfolio Practice</Title>
         <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
