--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <section class="content">
 
                 <h1 class="bio">About Me</h1>
-                <img id="mePic" src="assets/images/IMG_20190319_120400.jpg" alt="Me" style="width: 100px;height: 130px;">
+                <img id="mePic" src="assets/images/IMG_20190319_120400.jpg" alt="Me">
                 <p>
                     My full name is Thai Thanh Phan. I was born and raised in Austin, Texas. I attended the University of Texas at San Antonio for pre-pharmacy. Eventually, I discovered that I didn’t want to pursue a career as a pharmacist. After realizing I didn’t really know what I wanted to do, I went back home and attended Austin Community College to save money. After some deliberation, I started on the path to become a nurse. I took the necessary courses, but like pharmacy, found nursing to also be unfit for me. Clearly I was not interested in the medical field. After I quit my pursuit of nursing, I decided to just work and figure things out from there. I did mostly contract delivery jobs for various food deliveries as well as package deliveries for Amazon. I enjoyed the freedom of following my own schedule and choosing when I wanted to work. I did this for a few years and felt that I was becoming stagnant. I was no closer to figuring out a career path than I was when I left nursing behind. So, here I am in this program hoping to create a future for myself. 
                 </p>
