finished media query 640

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
 
         <meta charset="utf-8">
         <meta name="viewport" content="width = device-width, initial-scale = 1">
-        
+
         <Title>Portfolio Practice</Title>
         <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -40,12 +40,11 @@
 
                 <div class="columns">
 
-                    <img src="../Basic-Portfolio/assets/images/question_mark.jpeg" alt="Question" style="width: 200px; height: 125px;">
-                    <!-- <button class="btn">Hangman</button> -->
-                    <img src="../Basic-Portfolio/assets/images/question_mark.jpeg" alt="Question" style="width: 200px; height: 125px;">
-                    <img src="../Basic-Portfolio/assets/images/question_mark.jpeg" alt="Question" style="width: 200px; height: 125px;">
-                    <img src="../Basic-Portfolio/assets/images/question_mark.jpeg" alt="Question" style="width: 200px; height: 125px;">
-                    <img src="../Basic-Portfolio/assets/images/question_mark.jpeg" alt="Question" style="width: 200px; height: 125px;">
+                    <img class="columnPic" src="../Basic-Portfolio/assets/images/question_mark.jpeg" alt="Question">
+                    <img class="columnPic" src="../Basic-Portfolio/assets/images/question_mark.jpeg" alt="Question">
+                    <img class="columnPic" src="../Basic-Portfolio/assets/images/question_mark.jpeg" alt="Question">
+                    <img class="columnPic" src="../Basic-Portfolio/assets/images/question_mark.jpeg" alt="Question">
+                    <img class="columnPic" src="../Basic-Portfolio/assets/images/question_mark.jpeg" alt="Question">
 
                 </div>
 
