--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
 
                 <div class="columns">
 
-                    <img class="columnPic" src="../Basic-Portfolio/assets/images/question_mark.jpeg" alt="Question">
+                    <a href="https://tp222.github.io/Star_Wars/" target="_blank"><img class="columnPic" src="../Basic-Portfolio/assets/images/question_mark.jpeg" class="mr-3" alt="..."></a>
                     <img class="columnPic" src="../Basic-Portfolio/assets/images/question_mark.jpeg" alt="Question">
                     <img class="columnPic" src="../Basic-Portfolio/assets/images/question_mark.jpeg" alt="Question">
                     <img class="columnPic" src="../Basic-Portfolio/assets/images/question_mark.jpeg" alt="Question">
